--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
   height: 100dvh;
   width: 100dvw;
@@ -13,10 +13,12 @@ canvas {
   background-color: #fff;
 }
 .controls {
+  position: absolute;
   display: flex;
-  justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  /* margin-top: 30px; */
+  /* justify-content: center; */
+  bottom: 20px;
 }
 .button {
   background-color: #4caf50;
@@ -63,13 +65,12 @@ h3 #foodCount {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 90dvw;
+  width: 40dvw;
 }
 canvas {
-  width: 70dvw;
-  height: 90dvh;
+  width: 40dvw;
 }
-@media (max-width: 428px) {
+@media (max-width: 430px) {
   .button {
     font-size: 10px; /* Smaller font size for mobile */
     padding: 5px; /* Smaller padding */
@@ -79,7 +80,6 @@ canvas {
   }
   #snakeGame {
     width: 90dvw;
-    height: 70dvh;
   }
   .none {
     display: block;
@@ -95,7 +95,7 @@ canvas {
   }
 }
 
-@media (min-width: 429px) and (max-width: 834px) {
+@media (min-width: 431px) and (max-width: 884px) {
   .button {
     font-size: 16px; /* Smaller font size for mobile */
     padding: 8px; /* Smaller padding */
@@ -105,7 +105,9 @@ canvas {
   }
   #snakeGame {
     width: 90dvw;
-    height: 68dvh;
+  }
+  #container {
+    width: 90dvw;
   }
   .none {
     display: block;
